refactored a little bit. Fully translated to english

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="发送" />
+                android:text="Send" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/send_list"
@@ -32,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="10dp"
-                android:text="接收" />
+                android:text="Take over" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rece_list"
@@ -68,8 +67,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="断开"
                     android:onClick="disconnect"
+                    android:text="Disconnect"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -85,7 +84,7 @@
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:gravity="top"
-                    android:hint="输入要发送的文字"
+                    android:hint="Enter text to send"
                     android:maxLines="100"
                     android:padding="5dp" />
 
