--- a/nettyserver/src/main/res/layout/activity_main.xml
+++ b/nettyserver/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="发送" />
+                android:text="Send" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/send_list"
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="10dp"
-                android:text="接收" />
+                android:text="Take over" />
 
             <Spinner
                 android:id="@+id/spinner"
@@ -83,7 +83,7 @@
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:gravity="top"
-                    android:hint="输入要发送的文字"
+                    android:hint="Enter text to send"
                     android:maxLines="100"
                     android:padding="5dp" />
 
